# jobman

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  GET_STARTED.md  README.md  pyproject.toml
assets/: fms-env.yaml  fms.yaml  maxtext-env.yaml  maxtext-requirements.txt  requirements_maxtext.txt  requirements_torchprime.txt
config/: test_jobman.yaml
configs/: quick_start.yaml  tasks.yaml  template.yaml  v4-us-central2-b.yaml  v5-europe-west4-b.yaml  v5-us-central1-a.yaml  v6-europe-west4-a.yaml  v6-us-east1-d.yaml
configs/tpus/: template.yaml  v4_us-central2-b.yaml  v5e_europe-west4-b.yaml  v5e_us-central1-a.yaml  v6e_asia_northeast1-b.yaml  v6e_europe-west4-a.yaml  v6e_us-east1-d.yaml
docs/: manual.md
examples/: llamad3.1-8b_L200.sh  setup.sh
jobman/: __main__.py  availability.py  cli.py  command.py  gcsfuse.py  job.py  jobman.py  queue.py  runner.py  ssh.py  test_runner.py  tpu.py  utils.py  worker.py
jobman/envs/: conda.py  docker.py  venv.py
jobman/profilers/: billing_report.py  quota_report.py  storage_report.py
jobs/.jobman/: meta.json
misc/: count_tpus_in_zone.py
plots/: plot_losses.py
queue_machines_example/: 64v6e_worker_us_central1b.yaml  README.md  tasks.yaml  tasks_state.example.yaml
scripts/: hello_tpu.sh  submit_maxtext_eval.sh  submit_maxtext_task.sh  update_bootstrap_snapshots.sh
tests/: test_availability.py  test_bucket_location.py  test_cli.py  test_conda.sh  test_conda.yaml  test_docker.sh  test_docker.yaml  test_gcsfuse.sh  test_gcsfuse.yaml  test_ssh.sh  test_ssh.yaml  test_venv.sh  test_venv.yaml  test_worker.py
(+7 files in other folders)
