[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "jobman-lite"
version = "0.1.0"
description = "Lightweight TPU job orchestration system"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "click>=8.0",
]

[project.scripts]
jobman = "jobman.cli:cli"

[tool.setuptools.packages.find]
where = ["."]
include = ["jobman*"]
